# loan-fintech-hfl

./: .gitignore  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: 01 EDA-checkpoint.ipynb
data/clients_data/: X_test.csv  X_train_0.csv  X_train_1.csv  X_train_2.csv  X_train_3.csv  X_train_4.csv  X_val.csv  X_val_0.csv  X_val_1.csv  X_val_2.csv  X_val_3.csv  X_val_4.csv  y_test.csv  y_train.csv  y_train_0.csv  y_train_1.csv  y_train_2.csv  y_train_3.csv  y_train_4.csv  y_val.csv  y_val_0.csv  y_val_1.csv  y_val_2.csv  y_val_3.csv  y_val_4.csv
notebooks/: 01. EDA.ipynb  02. Centralized.ipynb  03. Decentralized.ipynb  Test - Demo.ipynb  decent.ipynb
notebooks/.ipynb_checkpoints/: 01 EDA-checkpoint.ipynb  02. Centralized-checkpoint.ipynb  Test - Demo-checkpoint.ipynb  decent-checkpoint.ipynb
src/: FL_client.py  FL_server.py  config.py  data_prep.py  local_utility.py  paths.py  quantization.py  smpc.py  train_centralized.py  train_decentralized.py
src/.ipynb_checkpoints/: config-checkpoint.py
