[project]
name = "mlc-fedml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flwr>=1.14.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.5.0",
    "optuna>=4.2.0",
    "scikit-learn==1.4.1.post1",
    "seaborn>=0.13.2",
    "xgboost==2.0.2",
]
