[project]
name = "mlc-fedml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flwr[simulation]<1.15.0",
    "ipython>=9.0.2",
    "jupyter>=1.1.1",
    "lightgbm>=4.5.0",
    "numpy>=1.26.4",
    "optuna>=4.2.0",
    "ray>=2.43.0",
    "scikit-learn==1.4.1.post1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "watermark>=2.5.0",
    "xgboost==2.0.2",
]
